--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div class="card4">
         <div class="circle">
-            <img src="image/Hawkeye LOGO.png" alt="Hero Logo" class="logo">
+            <img src="image/HAWKEYE LOGO.png" alt="Hero Logo" class="logo">
         </div>
         <img src="image/HAWKEYE.png" alt="CLINT BARTON" class="product_img">
         <div class="content">
@@ -92,5 +92,6 @@
     </div>
     <h3>Avengers Initiave |<a href="https://github.com/arpitgovil" target="_blank">©ArpitGovil</a></h3>
 </body>
+
 
 </html>
