--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AVENGERS INITIATIVE</title>
-    <link rel="icon" type="image/png" href="image/Avengers_logo copy.png">
+    <link rel="icon" type="image/png" href="image/Avengers_logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -96,4 +96,5 @@
 
 
 </html>
+
 
