--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
             <a href="https://www.marvel.com/characters/black-widow-natasha-romanoff" target="_blank">Read More</a>
         </div>
     </div>
-    <h3>Avengers Initiave |<a href="https://github.com/arpitgovil" target="_blank">©ArpitGovil</a></h3>
+    <h3>Avengers Initiave</h3>
 </body>
 
 
 </html>
+
 
 
